# cheque-management-odoo-17

./: .gitignore  .replit  Pasted-1-Introduction-The-Cheque-Management-System-aims-to-handle-all-aspects-of-cheque-processing-within-1730985803849.txt  Pasted-1-Introduction-The-Cheque-Management-System-aims-to-handle-all-aspects-of-cheque-processing-within-1730987224357.txt  README.md  __manifest__.py  pyproject.toml  replit.nix  requirements.txt
analytics/: menu_structure.py
cheque-managment-odoo-17/: README.md  __init__.py  __manifest__.py  requirements.txt
cheque-managment-odoo-17/models/: branch.py  cheque_category.py  cheque_manage.py  cheque_outgoing_manage.py  cheque_spend.py  payment_processor.py  res_config_setting.py
cheque-managment-odoo-17/pages/: menu_structure.py
data/: cron_cheque_notifications.xml
models/: __init__.py  branch.py  cheque_book.py  cheque_category.py  cheque_manage.py  cheque_outgoing_manage.py  cheque_payment.py  payment_processor.py  res_partner.py  revert_cheque.py
pages/: cash_flow_analysis.py  menu_structure.py  reports.py
report/: advanced_report_template.xml  cheque_report.xml  incoming_cheque_report.py  outgoing_cheque_report.py  report_wizard.py
security/: ir.model.access.csv
static/descreption/: index.html
views/: branch_view.xml  cheque_book.xml  cheque_outgoing_manage.xml  cheque_payment.xml  cheque_spend.xml  payment_processor_view.xml  report_wizard_view.xml  res_config.xml  res_partner.xml  revert_cheque.xml
wizard/: __init__.py  batch_assign_to_supplier_wizard.xml  cheque_wizard.py  report_wizard.py
(+8 files in other folders)
