[project]
name = "cheque-management-odoo"
version = "17.0.2.0.0"
description = "Comprehensive financial transaction management for Odoo"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
